# swarm-hole

./: Cargo.toml  README.md
assets/: all.npcs.ron  all.pcs.ron  all.skills.ron  npcs.ron  player.skills.ron
src/: app.rs  camera.rs  debug_ui.rs  lib.rs  light.rs  main.rs  materials.rs  npc.rs  physics.rs  player.rs  terrain.rs  ui.rs  vfx.rs  weapons.rs
src/skills/: health.rs  laser.rs  melee.rs  mod.rs  swarm.rs  xp.rs  xp_drops.rs
src/weapons/: laser.rs  melee.rs  mod.rs
