[package]
name = "swarm-hole"
version = "0.1.0"
authors = ["Călin Ardelean <mmn80cpu@gmail.com>"]
edition = "2021"

publish = false

[dependencies]
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
bevy = { version = "0.12", features = ["dynamic_linking", "file_watcher"] }
bevy_xpbd_3d = { version = "0.3", features = ["simd"] }
polyanya = "0.4"
bevy_hanabi = { version = "0.9", default-features = false, features = ["3d"] }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
