[package]
name = "swarm-hole"
version = "0.1.0"
authors = ["Călin Ardelean <mmn80cpu@gmail.com>"]
edition = "2021"

publish = false

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
thiserror = "1.0"
bevy = { version = "0.14", features = ["dynamic_linking", "file_watcher"] }
bevy_xpbd_3d = { version = "0.5", features = ["simd"] }
bevy_hanabi = { version = "0.12", default-features = false, features = ["3d"] }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
