[package]
name = "swarm-hole"
version = "0.1.0"
authors = ["Călin Ardelean <mmn80cpu@gmail.com>"]
edition = "2024"

publish = false

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
thiserror = "2.0"
bevy = { version = "0.15", features = ["dynamic_linking", "file_watcher"] }
avian3d = { version = "0.2", features = ["simd"] }
bevy_hanabi = { version = "0.14", default-features = false, features = ["3d"] }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
